--- a/Fleet-Managment/appsettings.json
+++ b/Fleet-Managment/appsettings.json
@@ -5,5 +5,33 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ep-empty-sound-a4z7ib7l.us-east-1.aws.neon.tech;Port=5432;UserId=default;Password=XBZoSd2r8FuY;Database=verceldb"
+  }
 }
+
+
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Server=ep-empty-sound-a4z7ib7l.us-east-1.aws.neon.tech;Port=5432;UserId=default;Password=XBZoSd2r8FuY;Database=verceldb"
+//  }
+//}
+
+
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
